# desafio-crawler

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  logger.py  runner.py
app/scrapers/: __init__.py  imdb_scraper.py  quotes_scraper.py
app/storage/: db.py  file.py
app/utils/: mailjet_email.py  scheduler.py  screenshot.py
app/utils.py/: __init__.py
docker/: dev.Dockerfile  dev.docker-compose.yml  prod.Dockerfile  prod.docker-compose.yml  test.Dockerfile  test.docker-compose.yml
docs/: prd.md
docs/adr/: 001-data-storage.md  002-scraping-libs.md  003-notifications.md
tests/: test_cli.py  test_file.py  test_logger.py  test_runner.py  test_scheduler.py  test_scrappers.py  test_screenshot.py  test_storage.py
